--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "jquery": "^3.7.1",
+    "lucide-react": "^0.476.0",
     "owl.carousel": "^2.3.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^7.1.3",
